<resources>
    <string name="app_name">OnePOS</string>
    <string name="title_activity_sale">SaleActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="company_phone">09420243505</string>
    <string name="folder_name">/OnePOSDB/</string>
    <string name="develop_by">Developed by Blue Ocean Strategy Co.Ltd</string>
    <string name="main_pos">အရောင်းစနစ်</string>
    <string name="main_opened_bill">အရောင်းအဖွင့်စာရင်းများ</string>
    <string name="main_sale_receipts">အရောင်းစာရင်းများ</string>
    <string name="main_purchase">အဝယ်စာရင်းသွင်းရန်</string>
    <string name="main_purchase_receipts">အဝယ်စာရင်းများ</string>
    <string name="main_credit_receipts">အကြွေးစာရင်းများ</string>
    <string name="main_product">ကုန်ပစ္စည်း</string>
    <string name="main_report">အစီရင်ခံစာများ</string>
    <string name="main_data_setup">ဒေတာအချက်အလက်များ</string>
    <string name="main_setting">စနစ်ထိန်းချုပ်ရန်</string>
    <string name="sub_add_new_product">ကုန်ပစ္စည်းအသစ်ထည့်ရန်</string>
    <string name="sub_product_list">ကုန်ပစ္စည်းများစာရင်း</string>
    <string name="sub_product_balance">ကုန်ပစ္စည်းလက်ကျန််</string>
    <string name="sub_track_product">မှာယူရတော့မည့်ကုန်ပစ္စည်းစာရင်း</string>
    <string name="sub_customer">ကုန်ဝယ်သူများ</string>
    <string name="sub_supplier">ကုန်ရောင်းသူများ</string>
    <string name="sub_category">ကုန်အမျိုးအစားများ</string>
    <string name="sub_unit">ယူနစ်များ</string>
    <string name="sub_user">အသုံးပြုသူများ</string>
    <string name="sub_data_backup">Data and Transaction Export</string>
    <string name="sub_data_restore">Data and Transaction Import</string>
    <string name="sub_shop_setting">ဆိုင်အချက်အလက်များ</string>
    <string name="sub_bill_setting">ဘေလ်အချက်အလက်များ</string>
    <string name="sub_printer">ပရင်တာ</string>
    <string name="sub_add_adjust_product">ပျက်စီးပျောက်ဆုံးကုန်ပစ္စည်းများထည့်ရန်</string>
    <string name="sub_adjust_product_list">ကုန်ပစ္စည်းပျက်စီးပျောက်ဆုံးစာရင်း</string>
    <string name="sub_receivable_list">ရရန်ရှိစာရင်း</string>
    <string name="sub_payable_list">ပေးရန်ရှိစာရင်း</string>
    <string name="sub_data_backup_cloud">Data and Transaction Export with Cloud</string>
    <string name="sub_data_restore_cloud">Data and Transaction Import with Cloud</string>
    <string name="sub_fill_customer">ကုန်ဝယ်သူထည့်ရန်</string>
    <string name="sub_fill_supplier">ကုန်ရောင်းသူထည့်ရန်</string>
    <string name="sub_fill_category">ကုန်အမျိုးအစားထည့်ရန်</string>
    <string name="sub_fill_unit">ယူနစ်ထည့်ရန်</string>
    <string name="sub_fill_user">အသုံးပြုသူထည့်ရန်</string>
    <string name="sub_fill_product">ကုန်ပစ္စည်းထည့်ရန်</string>
    <string name="sub_customer_repayment_history">ကုန်ဝယ်သူမှ အကြွေးပြန်ဆပ်စာရင်း</string>
    <string name="sub_supplier_repayment_history">ကုန်ရောင်းသူထံ အကြွေးပြန်ဆပ်စာရင်း</string>
    <string name="sub_add_sale_product">Add Sale Product</string>
    <string name="sub_voucher_format">ဘောင်ချာနံပါတ်သတ်မှတ်ရန်</string>
    <string name="data_backup_detail">(Device Storage ထဲသို့ Excel File ဖြင့် အချက်အလက်များထုတ်ယူသိမ်းဆည်းမည်)</string>
    <string name="data_restore_detail">(Export ထုတ်ထားသော Excel File မှအချက်အလက်များထည့်သွင်းမည်)</string>
    <string name="data_backup_cloud_detail">(အချက်အလက်များကို OnePOS Cloud Server တွင်သိမ်းဆည်းမည်)</string>
    <string name="data_restore_cloud_detail">(OnePOS Cloud Server မှအချက်အလက်များကို ထည့်သွင်းမည်)</string>
    <string name="category">ကုန်အမျိုးအစား</string>
    <string name="search">ရှာဖွေရန်</string>
    <string name="add">ထည့်မည်</string>
    <string name="edit">ပြင်မည်</string>
    <string name="ok">OK</string>
    <string name="save">သိမ်းမည်</string>
    <string name="category_name">အမျိုးအစားအမည်</string>
    <string name="refresh">Refresh</string>
    <string name="saved_category">အမျိုးအစားအောင်မြင်စွာထည့်ပြီး</string>
    <string name="saved_product">ကုန်ပစ္စည်းအောင်မြင်စွာထည့်ပြီး</string>
    <string name="deleted_category">ကုန်အမျိုးအစားအောင်မြင်စွာဖျက်ပြီး</string>
    <string name="no_delete_category">This category is using in product.Cannot delete the category!</string>
    <string name="code">ကုဒ်နံပါတ်</string>
    <string name="name">အမည်</string>
    <string name="shop_name">ဆိုင်အမည်</string>
    <string name="price">စျေးနှုန်း</string>
    <string name="sale_price">ရောင်းစျေး</string>
    <string name="pur_price">ဝယ်စျေး</string>
    <string name="product">ကုန်ပစ္စည်း</string>
    <string name="unit">ယူနစ်</string>
    <string name="user_unit">ယူနစ်အသုံးပြုမည်</string>
    <string name="track_stock">ကုန်ပစ္စည်းလျော့နည်းနေကြောင်းအချက်ပြမည်</string>
    <string name="unit_name">ယူနစ်အမည်</string>
    <string name="unit_keyword">ယူနစ်အတိုကောက်</string>
    <string name="saved_unit">ယူနစ်အောင်မြင်စွာထည့်ပြီး</string>
    <string name="deleted_unit">ယူနစ်အောင်မြင်စွာဖျက်ပြီး</string>
    <string name="no_delete_unit">This unit is using in product.Cannot delete the unit!</string>
    <string name="remove_product_unit">ကုန်ပစ္စည်းယူနစ်အောင်မြင်စွာဖျက်ပြီး</string>
    <string name="enter_product_code">ကုဒ်နံပါတ်ထည့်ပါ</string>
    <string name="enter_phone_number">ဖုန်းနံပါတ်ဖြည့်ပါ</string>
    <string name="enter_product_name">ပစ္စည်းအမည်ထည့်ပါ</string>
    <string name="enter_sale_price">ရောင်းစျေးထည့်ပါ</string>
    <string name="enter_pur_price">ဝယ်စျေးထည့်ပါ</string>
    <string name="product_code_already_exist">Product code has already existed!</string>
    <string name="unit_already_exist">This unit has already existed!</string>
    <string name="choose_standard_unit">Please Choose Standard Unit!</string>
    <string name="remove_something">ကိုဖျက်မှာလား?</string>
    <string name="quantity">အရေအတွက်</string>
    <string name="sale_quantity">ပမာဏ</string>
    <string name="deleted_product">ကုန်ပစ္စည်းအောင်မြင်စွာဖျက်ပြီး</string>
    <string name="no_delete_product">This product is using in other.Cannot delete the product!</string>
    <string name="close">Close</string>
    <string name="hold">ဆိုင်းငံ့ထားမည်</string>
    <string name="customer">ကုန်ဝယ်သူ</string>
    <string name="deleted_customer">ကုန်ဝယ်သူအောင်မြင်စွာဖျက်ပြီး</string>
    <string name="no_delete_customer">This customer is using in transaction.Cannot delete the customer!</string>
    <string name="mobile_number">ဖုန်းနံပါတ်</string>
    <string name="other_mobile_number">ဖုန်းနံပါတ်(၂)</string>
    <string name="address">လိပ်စာ</string>
    <string name="allow_credit_sale">အကြွေးရောင်းမည်</string>
    <string name="pay">ငွေပေးချေမည်</string>
    <string name="print_voucher">ဘောင်ချာပရင့်ထုတ်မည်</string>
    <string name="total_amount">စုစုပေါင်း</string>
    <string name="net_amount">ကျသင့်ငွေ</string>
    <string name="net_amount_with_currency">ကျသင့်ငွေ (MMK)</string>
    <string name="discount">လျှော့ငွေ</string>
    <string name="credit_sale">အကြွေးရောင်းမည်</string>
    <string name="remark">မှတ်ချက်</string>
    <string name="hold_remark">ဆိုင်းငံ့မှတ်ချက်</string>
    <string name="percent_validate">လျှော့ငွေရာခိုင်နှုန်းသည် ၁၀၀ ရာခိုင်နှုန်း ထက်ကြီးနေပါသည်</string>
    <string name="discount_greater_total">လျှော့ငွေစုစုပေါင်းသည် ကျသင့်ငွေထက်များနေပါသည်</string>
    <string name="saved_customer">ကုန်ဝယ်သူအောင်မြင်စွာထည့်ပြီး</string>
    <string name="customer_name">ဝယ်သူအမည်</string>
    <string name="back_to_pos">အရောင်းစနစ်သို့</string>
    <string name="user">အသုံးပြုသူ</string>
    <string name="user_name">အသုံးပြုသူအမည်</string>
    <string name="saved_user">အသုံးပြုသူအောင်မြင်စွာထည့်ပြီး</string>
    <string name="deleted_user">အသုံးပြုသူအောင်မြင်စွာဖျက်ပြီး</string>
    <string name="no_delete_user">မအောင်မြင်ပါ။အသုံးပြုသူတစ်ယောက်အနည်းဆုံးရှိရမည်။</string>
    <string name="title_activity_login">Sign in</string>
    <string name="password_hint">**********</string>
    <string name="hold_success_message">အရောင်းအဖွင့်စာရင်းထဲသို့သိမ်းခဲ့သည်</string>
    <string name="deleted_open_bill">ကိုအောင်မြင်စွာဖျက်ခဲ့ပြီး</string>
    <string name="export_data_success">Export Data successful!</string>
    <string name="export_data_fail">Export Data failed!</string>
    <string name="import_data_success">Import Data successful!</string>
    <string name="import_data_fail">Import Transaction failed!</string>
    <string name="export_tran_success">Export Transaction successful!</string>
    <string name="export_tran_fail">Export Transaction failed!</string>
    <string name="import_tran_success">Import Transaction successful!</string>
    <string name="import_tran_fail">Import Transaction failed!</string>
    <string name="percent_hint">0%</string>
    <string name="amount_hint">0.00</string>
    <string name="amount">စုစုပေါင်း</string>
    <string name="close_my">ပိတ်မည်</string>
    <string name="do_not">မလုပ်ဆောင်ပါ</string>
    <string name="success">Success!</string>
    <string name="to_pos">အရောင်းစနစ်သို့</string>
    <string name="detail">အသေးစိတ်</string>
    <string name="add_to_pos">အရောင်းစာရင်းသွင်းမည်</string>
    <string name="ok_my">အိုကေ</string>
    <string name="delete_confirm_message">ဖျက်ရန်သေချာပါသလား?</string>
    <string name="today_sale_list">ယနေ့အရောင်းစာရင်း</string>
    <string name="today_purchase_list">ယနေ့အဝယ်စာရင်း</string>
    <string name="today_adjustment_list">ယနေ့အပျက်အဆီးစာရင်း</string>
    <string name="to_filter_date">နေ့ရက်ဖြင့်ရှာရန်</string>
    <string name="sale_person">အရောင်းဝန်ထမ်း</string>
    <string name="date_time">ရက်စွဲ</string>
    <string name="credit">အကြွေး</string>
    <string name="to_add_new_customer">ကုန်ဝယ်သူအသစ်ထည့်ရန်</string>
    <string name="data_backup_confirm_message">အချက်အလက်များထုတ်ယူမှာသေချာပါသလား?</string>
    <string name="data_restore_confirm_message">အချက်အလက်များထည့်သွင်းမှာသေချာပါသလား?</string>
    <string name="current_quantity">လက်ရှိအရေအတွက်</string>
    <string name="please_enter_value">Please enter a value!</string>
    <string name="please_apply_paid_amount">Please apply paid amount!</string>
    <string name="edit_success">ပြင်ဆင်ချက်အောင်မြင်</string>
    <string name="back">Back</string>
    <string name="new_purchase">New Purchase</string>
    <string name="new_sale">New Sale</string>
    <string name="create_data">Create Shop Data</string>
    <string name="last_debt_amount">ယခင်ကျန်ငွေ</string>
    <string name="debt_amount">ကျန်ငွေ</string>
    <string name="paid_amount">ပေးငွေ</string>
    <string name="change_amount">ပြန်အမ်းငွေ</string>
    <string name="finish">Finish</string>
    <string name="rp_day_end_sale">နေ့စဉ်အရောင်းစာရင်းစုစုပေါင်း</string>
    <string name="rp_detailed_sale">အရောင်းစာရင်း အစီရင်ခံစာ</string>
    <string name="rp_sale_by_date">နေ့အလိုက် အရောင်းစုစုပေါင်း</string>
    <string name="rp_sale_by_month">လအလိုက် အရောင်းစုစုပေါင်း</string>
    <string name="rp_sale_by_category">ကုန်အုပ်စုအရ အရောင်းစုစုပေါင်း</string>
    <string name="rp_sale_by_product">ကုန်ပစ္စည်းအရ အရောင်းစုစုပေါင်း</string>
    <string name="rp_top_sale_category">ရောင်းအားအများဆုံးကုန်အုပ်စုများ</string>
    <string name="rp_top_sale_product">ရောင်းအားအများဆုံးကုန်ပစ္စည်းများ</string>
    <string name="rp_detailed_purchase">အဝယ်စာရင်း အစီရင်ခံစာ</string>
    <string name="rp_product_quantity">ကုန်ပစ္စည်းပမာဏ အစီရင်ခံစာ</string>
    <string name="voucher_no">ဘောင်ချာနံပါတ်</string>
    <string name="total">Total</string>
    <string name="unit_by_standard">ယူနစ် (Standard UOM)</string>
    <string name="opening_stock">Opening Stock</string>
    <string name="purchase">Purchase</string>
    <string name="sale">Sale</string>
    <string name="damage">Damage</string>
    <string name="balance">Balance</string>
</resources>