<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RpProductQuantityActivity">

    <TextView android:id="@+id/tvDatePeriod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:textSize="@dimen/text_small"
        android:textColor="@color/colorWhite" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal"
                android:background="@color/colorPrimary">

                <TextView style="@style/ReportTitle"
                    android:layout_width="80dp"
                    android:text="@string/code" />

                <TextView style="@style/ReportTitle"
                    android:layout_width="200dp"
                    android:text="@string/product" />

                <TextView style="@style/ReportTitle"
                    android:layout_width="100dp"
                    android:text="@string/unit_by_standard" />

                <TextView style="@style/ReportTitle"
                    android:layout_width="150dp"
                    android:text="@string/category" />

                <TextView style="@style/ReportTitle"
                    android:layout_width="100dp"
                    android:text="@string/opening_stock"
                    android:gravity="right"/>

                <TextView style="@style/ReportTitle"
                    android:layout_width="100dp"
                    android:text="@string/purchase"
                    android:gravity="right"/>

                <TextView style="@style/ReportTitle"
                    android:layout_width="100dp"
                    android:text="@string/sale"
                    android:gravity="right"/>

                <TextView style="@style/ReportTitle"
                    android:layout_width="100dp"
                    android:text="@string/damage"
                    android:gravity="right"/>

                <TextView style="@style/ReportTitle"
                    android:layout_width="100dp"
                    android:text="@string/balance"
                    android:gravity="right"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView android:id="@+id/rvProductQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </HorizontalScrollView>

</LinearLayout>