<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupMenuActivity"
    android:background="@color/colorPrimary">

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

        <TextView android:text="@string/create_data"
            style="@style/StartMainTitle"
            android:layout_marginBottom="50dp"
            android:drawableLeft="@drawable/ic_play_arrow_black_24dp"
            android:drawablePadding="5dp"/>

        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@drawable/bd_gray_10r_white">

        <TextView android:id="@+id/tvItem"
            style="@style/SetupMenuTextView"
            android:text="@string/sub_fill_user"
            android:drawableLeft="@drawable/ic_people_black_24dp" />

        <View style="@style/StyleDividerLight"></View>

        <TextView android:id="@+id/tvUnit"
            style="@style/SetupMenuTextView"
            android:text="@string/sub_fill_unit"
            android:drawableLeft="@drawable/ic_view_quilt_black_24dp" />

        <View style="@style/StyleDividerLight"></View>

        <TextView android:id="@+id/tvCustomer"
            style="@style/SetupMenuTextView"
            android:text="@string/sub_fill_customer"
            android:drawableLeft="@drawable/ic_people_black_24dp" />

        <View style="@style/StyleDividerLight"></View>

        <TextView android:id="@+id/tvSupplier"
            style="@style/SetupMenuTextView"
            android:text="@string/sub_fill_supplier"
            android:drawableLeft="@drawable/ic_people_black_24dp" />

        <View style="@style/StyleDividerLight"></View>

        <TextView android:id="@+id/tvCategory"
            style="@style/SetupMenuTextView"
            android:text="@string/sub_fill_category"
            android:drawableLeft="@drawable/ic_collections_black_24dp" />

        <View style="@style/StyleDividerLight"></View>

        <TextView android:id="@+id/tvProduct"
            style="@style/SetupMenuTextView"
            android:text="@string/sub_fill_product"
            android:drawableLeft="@drawable/ic_playlist_add_black_24dp" />

        <View style="@style/StyleDividerLight"></View>

            <Button android:id="@+id/btnNext"
                style="@style/StartMainButton"
                android:text="@string/finish" />

        </LinearLayout>

</LinearLayout>

</ScrollView>