<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RpDetailedSaleActivity">

    <TextView android:id="@+id/tvDatePeriod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:textSize="@dimen/text_small"
        android:textColor="@color/colorWhite" />

<HorizontalScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="horizontal">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <TextView style="@style/ReportTitle"
            android:layout_width="150dp"
            android:text="@string/voucher_no" />

        <TextView style="@style/ReportTitle"
            android:layout_width="150dp"
            android:text="@string/date_time" />

        <TextView style="@style/ReportTitle"
            android:layout_width="100dp"
            android:text="@string/customer" />

        <TextView style="@style/ReportTitle"
            android:layout_width="100dp"
            android:text="@string/user" />

        <TextView style="@style/ReportTitle"
            android:layout_width="100dp"
            android:text="@string/total_amount"
            android:gravity="right"/>

        <TextView style="@style/ReportTitle"
            android:layout_width="100dp"
            android:text="@string/discount"
            android:gravity="right"/>

        <TextView style="@style/ReportTitle"
            android:layout_width="100dp"
            android:text="@string/net_amount"
            android:gravity="right"/>

        <TextView style="@style/ReportTitle"
            android:layout_width="100dp"
            android:text="@string/last_debt_amount"
            android:gravity="right"/>

        <TextView style="@style/ReportTitle"
            android:layout_width="100dp"
            android:text="@string/paid_amount"
            android:gravity="right"/>

        <TextView style="@style/ReportTitle"
            android:layout_width="100dp"
            android:text="@string/change_amount"
            android:gravity="right"/>

        <TextView style="@style/ReportTitle"
            android:layout_width="100dp"
            android:text="@string/debt_amount"
            android:gravity="right"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView android:id="@+id/rvDetailedSale"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@color/colorLight">

        <TextView style="@style/ReportFooter"
            android:layout_width="150dp"
            android:text="@string/total"
            android:textStyle="bold"/>

        <TextView style="@style/ReportFooter"
            android:layout_width="150dp" />

        <TextView style="@style/ReportFooter"
            android:layout_width="100dp" />

        <TextView style="@style/ReportFooter"
            android:layout_width="100dp" />

        <TextView android:id="@+id/tvTotalAmt"
            style="@style/ReportFooter"
            android:layout_width="100dp"
            android:gravity="right"
            android:textStyle="bold"/>

        <TextView android:id="@+id/tvDiscountAmt"
            style="@style/ReportFooter"
            android:layout_width="100dp"
            android:gravity="right"
            android:textStyle="bold"/>

        <TextView android:id="@+id/tvNetAmt"
            style="@style/ReportFooter"
            android:layout_width="100dp"
            android:gravity="right"
            android:textStyle="bold"/>

        <TextView style="@style/ReportFooter"
            android:layout_width="100dp" />

        <TextView style="@style/ReportFooter"
            android:layout_width="100dp" />

        <TextView style="@style/ReportFooter"
            android:layout_width="100dp" />

        <TextView style="@style/ReportFooter"
            android:layout_width="100dp" />

    </LinearLayout>

</LinearLayout>

</HorizontalScrollView>

</LinearLayout>