<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CategoryActivity"
    style="@style/DialogLayout">

    <TextView
        android:id="@+id/tvProfileTitle"
        style="@style/DialogTitle"
        android:text="@string/unit"/>

    <View style="@style/StyleDividerLight"></View>

    <LinearLayout style="@style/DialogContent">

        <com.google.android.material.textfield.TextInputLayout android:id="@+id/input_unit_name"
            style="@style/TextInputLayout">
            <EditText android:id="@+id/etUnitName"
                style="@style/EditText"
                android:hint="@string/unit_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout android:id="@+id/input_unit_keyword"
            style="@style/TextInputLayout">
            <EditText android:id="@+id/etUnitKeyword"
                style="@style/EditText"
                android:hint="@string/unit_keyword" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <View style="@style/StyleDividerLight"></View>

    <LinearLayout style="@style/DialogBottom">

        <Button android:id="@+id/btnCancel"
            style="@style/DialogClose"
            android:text="@string/close_my"/>

        <Button android:id="@+id/btnOk"
            style="@style/DialogOk"
            android:text="@string/save"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

</LinearLayout>